finished all logic including colors

--- a/index.html
+++ b/index.html
@@ -13,39 +13,38 @@
 <body>
 
   <div class="main">
-    <button class="temp">Click me </button>
   <h3 class="head">Calculator</h3>
   <div class="calculator ">
     <div class="screen"><div class="answer">0</div></div>
     <div class="allButtons">
       <div class="row">
-        <button class="buttonStyle clear">AC</button>
-        <button class="buttonStyle signChange" >+/-</button>
-        <button class="buttonStyle  operator" >%</button>
-        <button class="buttonStyle operator" value="/" >/</button>
+        <button class="buttonStyle clear top">AC</button>
+        <button class="buttonStyle back top" value="back">C</button>
+        <button class="buttonStyle  percentage top" value="%">%</button>
+        <button class="buttonStyle operator right" value="/" >/</button>
       </div>
       <div class="row">
         <button class="buttonStyle number" value="7">7</button>
         <button class="buttonStyle number" value="8">8</button>
         <button class="buttonStyle number" value="9">9</button>
-        <button class="buttonStyle operator" value="*">*</button>
+        <button class="buttonStyle operator right" value="*">*</button>
       </div>
       <div class="row">
         <button class="buttonStyle number" value="4" >4</button>
         <button class="buttonStyle number" value="5">5</button>
         <button class="buttonStyle number" value="6">6</button>
-        <button class="buttonStyle operator" value="-">-</button>
+        <button class="buttonStyle operator right" value="-">-</button>
       </div>
       <div class="row">
         <button class="buttonStyle number" value="1">1</button>
         <button class="buttonStyle number" value="2">2</button>
         <button class="buttonStyle number" value="3">3</button>
-        <button class="buttonStyle operator" value="+">+</button>
+        <button class="buttonStyle operator right" value="+">+</button>
       </div>
       <div class="row">
         <button class="buttonStyle zero number" value="0">0</button>
-        <button class="buttonStyle decimal">.</button>
-        <button class="buttonStyle equals operator" value="=">=</button>
+        <button class="buttonStyle decimal" value=".">.</button>
+        <button class="buttonStyle equals operator right" value="=">=</button>
       </div>
 
 
