--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="main">
-  <h3 class="head">Calculator</h3>
+  <!-- <h3 class="head">Calculator</h3> -->
   <div class="calculator ">
     <div class="screen"><div class="answer">0</div></div>
     <div class="allButtons">
